# open-kb-rag

./: .env.example  .gitignore  PLAN.md  README.md  SETUP.md  initialprompt.md  kb-mcp.service  kb-slack.service  pyproject.toml
docs/: flow.md
plans/: ingest-403-workaround.md  migrate-supabase-to-local-postgres.md
scripts/: install-pg17-client.sh  phase1-install-postgres.sh  phase6-setup-backups.sh  phase7-upgrade-to-pg17.sh
sql/: init.sql
src/kb/: __init__.py  config.py  db.py  db_pg.py  models.py  preflight.py
src/kb/crosspost/: __init__.py  summarize.py
src/kb/ingest/: chunker.py  embeddings.py  fetchers.py  llm.py  pipeline.py  sanitize.py  storage.py  storage_pg.py  tagger.py
src/kb/manage/: __init__.py  ops.py  ops_pg.py
src/kb/mcp/: server.py
src/kb/query/: __init__.py  engine.py  engine_pg.py
src/kb/slack/: bot.py  handlers.py
tests/: conftest.py  test_chunker.py  test_crosspost.py  test_fetchers.py  test_sanitize.py  test_tagger.py
