[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "open-kb-rag"
version = "0.1.0"
description = "Personal knowledge base with RAG — ingest via Slack, query via MCP"
requires-python = ">=3.11"
dependencies = [
    "supabase>=2.0",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "ollama>=0.4",
    "anthropic>=0.40",
    "trafilatura>=1.12",
    "youtube-transcript-api>=0.6",
    "pymupdf>=1.24",
    "tiktoken>=0.7",
    "slack-bolt>=1.20",
    "mcp>=1.0",
    "bleach>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
